Fixes the issue of folder item wrapping or not wrapping

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -18,6 +18,11 @@
 	margin: 0;
 }
 
+// This fixes the issue of folder item wrapping or not wrapping
+.navigation-list--children {
+	width: auto;
+	white-space: normal;
+}
 
 // Default Page
 .default-page .navigation-list--children {
